--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <% include ../partials/head %>
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <header>
+        <% include ../partials/header %>
+    </header>
+    <main class="main">
+        <div class="container">
+            <div class="page-header">
+                <h1> WELCOME </h1>
+            </div>
+        </div>
+    </main>
+    <footer class="footer navbar-fixed-bottom">
+        <% include ../partials/footer %>
+    </footer>
   </body>
 </html>
