--- a/views/pages/services.ejs
+++ b/views/pages/services.ejs
@@ -11,7 +11,7 @@
     <main class="main">
         <div class="container">
             <div class="page-header">
-                <h1> Portfolio </h1>
+                <h1> Blog </h1>
             </div>
         </div>
     </main>
