--- a/views/pages/aboutme.ejs
+++ b/views/pages/aboutme.ejs
@@ -1,3 +1,9 @@
+<!-- File name: aboutme.ejs
+     Author's name: Hae Yeon Kang (Lucy)
+     web site name: Hae Yeon's Portfolio Website
+     file description: This is a page that describes my qualification, education, experiences and personal interest.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
