--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,3 +1,9 @@
+<!-- File name: index.ejs
+     Author's name: Hae Yeon Kang (Lucy)
+     web site name: Hae Yeon's Portfolio Website
+     file description: This is the main page of the website.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
