--- a/views/pages/portfolio.ejs
+++ b/views/pages/portfolio.ejs
@@ -1,3 +1,9 @@
+<!-- File name: portfolio.ejs
+     Author's name: Hae Yeon Kang (Lucy)
+     web site name: Hae Yeon's Portfolio Website
+     file description: This is a page that will display my previous works.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
