--- a/views/pages/services.ejs
+++ b/views/pages/services.ejs
@@ -1,3 +1,9 @@
+<!-- File name: services.ejs
+     Author's name: Hae Yeon Kang (Lucy)
+     web site name: Hae Yeon's Portfolio Website
+     file description: This is a page that 
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -11,7 +17,7 @@
     <main class="main">
         <div class="container">
             <div class="page-header">
-                <h1> Blog </h1>
+                <h1> Services </h1>
             </div>
         </div>
     </main>
