--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -12,4 +12,4 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
         
         <!-- custom CSS -->
-        <!--<script src="../../public/stylesheets/style.css"> </script>-->
+        <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
