--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,20 +8,19 @@
 	                <span class="icon-bar"></span>
 	            </button>
 	         
-	            <a class="navbar-brand" href="#">
+	            <a class="navbar-brand" href="/">
 	            <!-- logo -->
-	            <!--<img src="img/logo.png" alt="" width="250"/>-->
-                HAE YEON KANG
+	            <img src="images/logo.png" alt="HAE YEON KANG" width="300"/>
+                <!--HAE YEON KANG-->
 	            </a>
-                
 	        </div>
 	        <div class="collapse navbar-collapse">
-	            <ul class="nav navbar-nav navbar-right">
-		            <li class="active"><a href="#">Home</a></li>
-		            <li><a href="#">About Me</a></li>
-		            <li><a href="#">Portfolio</a></li>
-		            <li><a href="#">Blog</a></li>
-		            <li><a href="#">Contact Me</a></li>
+	            <ul class="nav navbar-nav navbar-center">
+		            <li class="active"><a href="/">Home</a></li>
+		            <li><a href="/aboutme">About Me</a></li>
+		            <li><a href="/portfolio">Portfolio</a></li>
+		            <li><a href="/services">Services</a></li>
+		            <li><a href="/contactme">Contact Me</a></li>
 	            </ul>
 	        </div>
 	   </div>
