--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,10 @@
-<!-- this file will be in head tag -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title><%= title %></title>
+  </head>
+  <body>
+    <header>
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
@@ -40,4 +46,5 @@
                         </ul>
                     </div>
             </div>
-            </nav>
+        </nav>
+   </header>
