--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -4,12 +4,68 @@
      file description: This is a page that describes my qualification, education, experiences and personal interest.
 -->
 
-    <% include ../partials/header %>
+<% include ../partials/header %>
     <main class="main">
         <div class="container">
             <div class="page-header">
                 <h1> About Me </h1>
             </div>
+            <img src="../images/lucy.png" alt="Lucy" />
+            <br />
+            <br /> Briefly introducing myself, I am a self-motivated 2nd year Computer Programmer student in Georgian College. 
+            I love yoga, music, animals, scuba diving and learning new technology.
+            Currently looking for an opportunity to be a part of a development team for my Fall(September - December) 2016
+            Co-op position.
+            <br />
+            <br />
+            <small><i>*for more information about co-op program and its benefit, please <a href="employer_guide.pdf" download="Employer's Guide">click here</a> to download 'Employer's Guide' document.</i></small>
+            <br />
+            <h3> Qualifications </h3>
+            <br/>
+            <img class="skill" src="../images/html5-logo.png" alt="HTML5" height="80" />
+            <img class="skill" src="../images/css3-logo.png" alt="CSS3" height="80" />
+            <img class="skill" src="../images/2000px-PHP-logo.png" alt="PHP" height="70" />
+            <img class="skill" src="../images/MySQL-logo.png" alt="MySQL" height="70" />
+            <img class="skill" src="../images/java-logo.png" alt="Java" height="80" />
+            <p>
+            <br/>
+            </p>
+            <ul>
+                <li>Web Development: Express, Node.js, PHP, MySQL, Bootstrap3, HTML5, CSS3</li>
+                <li>OOP language: Java, C#</li>
+                <li>Version Control: Github</li>
+                <li>Extra: knowledge in SDLC, Agile Methodology and UML, Mainframe, Linux System Administration and shell scripting</li>
+                <li>Strong attention to detail and ability to analyze and solve problems</li>
+                <li>Good communication skill and ability to work as a team</li>
+                <li>Organizational (time management) skill and ability to work efficiently</li>
+            </ul>
+            <br />
+            <h3> Education </h3>
+            <h5><em>Georgian College [Barrie, ON]    Jan 2015 - Present</em></h5> 
+            <p>Diploma in Computer Programmer (Co-op)
+            <br/>Academic Dean's List (May - Aug 2015) - 94.1% average
+            <br/>Academic Dean's List (Jan - Apr 2015) - 97.8% average</p>
+            <br/>
+            <h5><em>International College of Management Sydney (ICMS) [Manly, AUS]   Jun 2007 - Dec 2011</em></h5> Bachelor Degree in Business Management
+            <br/> GPA - 3.67 out of 4.00 (91.75%)
+            <br/>
+            <br/>
+            
+            <h3> Work Experience </h3>
+            <h5><em> Nahanni Steel Products [Brampton, ON]    Aug 2015 - Dec 2015</em></h5>
+            <p></p>
+            <br/>
+            <br/> 
+            <h3> Educational Achievements </h3>
+            <h5><em>Georgian College Academic Dean’s List [Barrie, ON] 	May 2015</em></h5> 
+            <p>Achieved GPA 97.8% for the Winter 2015 Semester</p>
+            <br/>
+            <h5><em>International Education and Training Entrance Scholarship [Barrie, ON] 	May 2015</em></h5> 
+            <p>Demonstrated academic achievement in the home country. Awarded by Georgian College.</p>
+            <br/>
+            
+
+
         </div>
     </main>
     <% include ../partials/footer %>
