--- a/views/pages/portfolio.ejs
+++ b/views/pages/portfolio.ejs
@@ -4,12 +4,58 @@
      file description: This is a page that will display my previous works.
 -->
 
-    <% include ../partials/header %>
+<% include ../partials/header %>
     <main class="main">
         <div class="container">
             <div class="page-header">
                 <h1> Portfolio </h1>
             </div>
+
+            <!-- Projects -->
+            <div class="row">
+                <div class="col-md-6 portfolio-item">
+                    <a href="http://gc200294841.computerstudi.es/webfundamental/Project/">
+                        <img class="img-responsive" src="../images/canon-site.png" alt="Canon website">
+                    </a>
+                    <h3>
+                    <a href="http://gc200294841.computerstudi.es/webfundamental/Project/">Canon Corporate Website</a>
+                </h3>
+                    <p>A Canon coporate website built on HTML and CSS.</p>
+                </div>
+                <div class="col-md-6 portfolio-item">
+                    <a href="http://gc200294841.computerstudi.es/php/assn2/default.php">
+                        <img class="img-responsive" src="../images/php-cms.png" alt="Contents-Management-Site">
+                    </a>
+                    <h3>
+                    <a href="http://gc200294841.computerstudi.es/php/assn2/default.php">Portfolio Website</a>
+                </h3>
+                    <p>A Portfolio website with Contents Management System built on PHP, MySQL, Bootstrap, HTML and CSS.</p>
+                </div>
+            </div>
+            <!-- end of first row -->
+
+            <!-- Projects -->
+            <div class="row">
+                <div class="col-md-6 portfolio-item">
+                    <a href="http://gc200294841.computerstudi.es/webfundamental/Assignment3/index.html">
+                        <img class="img-responsive" src="../images/movie-site.png" alt="Movie Site">
+                    </a>
+                    <h3>
+                    <a href="http://gc200294841.computerstudi.es/webfundamental/Assignment3/index.html">Movie Website</a>
+                </h3>
+                    <p>Movie Website built on HTML and CSS and gone through website validation (https://validator.w3.org/) </p>
+                </div>
+                <div class="col-md-6 portfolio-item">
+                    <a href="#">
+                        <img class="img-responsive" src="../images/startup-593331_640.jpg" alt="More Projects to come">
+                    </a>
+                    <h3>
+                    <a href="#">And more..</a>
+                </h3>
+                    <p>There are more projects to come!</p>
+                </div>
+            </div>
+            <!-- end of second row -->
         </div>
     </main>
     <% include ../partials/footer %>
