--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,13 +32,13 @@
                             <span class="icon-bar"></span>
                         </button>
                     
-                        <a class="navbar-brand" href="/">
+                        <a class="navbar-brand navbar-brand-centered" href="/">
                         <!-- logo -->
                         <img src="images/logo.png" alt="HAE YEON KANG" width="300"/>
                         <!--HAE YEON KANG-->
                         </a>
                     </div>
-                    <div class="collapse navbar-collapse">
+                    <div class="collapse navbar-collapse" id="navbar-brand-centered">
                         <ul class="nav navbar-nav navbar-center">
                             <li class="active"><a href="/">Home</a></li>
                             <li><a href="/about">About</a></li>
