--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,13 +4,68 @@
      file description: This is the main page of the website.
 -->
 
-    <% include ../partials/header %>
-    <main class="main">
-        <div class="container">
-            <div class="page-header">
-                <h1> WELCOME </h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title>
+        <%= title %>
+    </title>
+</head>
+
+<body class="full">
+    <header>
+        <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- favicon -->
+        <!--<link rel="icon" type="image/png" href="pics/favicon.png" />-->
+
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
+        crossorigin="anonymous">
+
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r"
+        crossorigin="anonymous">
+
+        <!-- custom CSS -->
+        <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
+
+        <nav class="navbar navbar-transparent" role="navigation">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse" aria-expanded="false"
+                    aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+
+                    <a class="navbar-brand navbar-brand-centered" href="/">
+                        <!-- logo -->
+                        <img src="images/logo.png" alt="HAE YEON KANG" width="300" />
+                        <!--HAE YEON KANG-->
+                    </a>
+                </div>
+                <div class="collapse navbar-collapse" id="navbar-brand-centered">
+                    <ul class="nav navbar-nav navbar-center">
+                        <li class="active"><a href="/">Home</a></li>
+                        <li><a href="/about">About</a></li>
+                        <li><a href="/portfolio">Portfolio</a></li>
+                        <li><a href="/services">Services</a></li>
+                        <li><a href="/contact">Contact</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
+        </nav>
+    </header>
+
+
+
+    <main class="main">
+
     </main>
     <% include ../partials/footer %>
-
