--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -8,62 +8,118 @@
     <main class="main">
         <div class="container">
             <div class="page-header">
-                <h1> About Me </h1>
+                <h1> About HaeYeon </h1>
             </div>
-            <img src="../images/lucy.png" alt="Lucy" />
-            <br />
-            <br /> Briefly introducing myself, I am a self-motivated 2nd year Computer Programmer student in Georgian College. 
-            I love yoga, music, animals, scuba diving and learning new technology.
-            Currently looking for an opportunity to be a part of a development team for my Fall(September - December) 2016
-            Co-op position.
-            <br />
-            <br />
-            <small><i>*for more information about co-op program and its benefit, please <a href="employer_guide.pdf" download="Employer's Guide">click here</a> to download 'Employer's Guide' document.</i></small>
-            <br />
-            <h3> Qualifications </h3>
-            <br/>
+            <div class="row">
+                <div class="col-md-9">
+                    <br/>
+                    <p>I am a self-motivated passionate Computer Programmer, yoga lover, continuous learner. My coding manifesto
+                        is to write code readable and organised, reduce code redundency and increase efficiency, test and
+                        investigate every scenario possible.</p>
+                    <p>Currently looking for an opportunity to be a part of a development team for my Fall(September - December)
+                        2016 Co-op position and after graduation from January.</p>
+                    <br />
+                    <small><i>*for more information about co-op program and its benefit, please <a href="employer_guide.pdf" download="Employer's Guide">click here</a> to download 'Employer's Guide' document.</i></small>
+                </div>
+                <div class="col-md-3">
+                    <img src="../images/lucy.png" alt="Lucy" />
+                </div>
+            </div>
+            
+            <!-- qualifications section -->
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2 class="page-header">Qualifications</h2>
+                </div>
+                <div class="col-lg-4 col-sm-6 text-center">
+                    <img class="img-center" src="../images/responsive_web_development.png" height="200" alt="Responsive Web Design">
+                    <h3>Responsive Design<br/><small>CSS, Bootstrap</small></h3>
+                    <p>Website that is responsive to the scale of any devices.</p>
+                </div>
+                <div class="col-lg-4 col-sm-6 text-center">
+                    <img class="img-center" src="../images/cms.png" height="200" alt="Contents Management System">
+                    <h3>CMS<br/><small>PHP, MySQL</small></h3>
+                    <p>Contents Management System that gives flexibility to manage website contents by yourself.</p>
+                </div>
+                <div class="col-lg-4 col-sm-6 text-center">
+                    <img class="img-center" src="../images/mean.png" height="200" alt="MEAN stack">
+                    <h3>MEAN stack<br/><small>MongoDB, Express.js, Angular.js, and Node.js</small></h3>
+                    <p>Building a Dynamic Web Application</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-sm-6 text-center">
+                    <img class="img-center" src="../images/java-logo.png" height="200" alt="Java">
+                    <h3>OOP<br/><small>Java</small></h3>
+                    <p>Object-Oriented Programming</p>
+                </div>
+                <div class="col-lg-4 col-sm-6 text-center">
+                    <img class="img-center" src="../images/Octocat.png" height="200" alt="GitHub">
+                    <h3>Version Control<br/><small>GitHub</small> </h3>
+                    <p>Continuous version control to manage projects timely manner.</p>
+                </div>
+                <div class="col-lg-4 col-sm-6 text-center">
+                    <img class="img-center" src="" height="200" alt="">
+                    <h3>Some skill<br/><small>related info</small></h3>
+                    <p>related info</p>
+                </div>
+            </div>
+            <!-- Initial contents. Not included yet...
+            
+            <div class="row">
+                <div class="col-md-12">
+                    <h3> Qualifications </h3>
+                    <br/>
+                    
             <img class="skill" src="../images/html5-logo.png" alt="HTML5" height="80" />
             <img class="skill" src="../images/css3-logo.png" alt="CSS3" height="80" />
             <img class="skill" src="../images/2000px-PHP-logo.png" alt="PHP" height="70" />
             <img class="skill" src="../images/MySQL-logo.png" alt="MySQL" height="70" />
             <img class="skill" src="../images/java-logo.png" alt="Java" height="80" />
-            <p>
-            <br/>
-            </p>
-            <ul>
-                <li>Web Development: Express, Node.js, PHP, MySQL, Bootstrap3, HTML5, CSS3</li>
-                <li>OOP language: Java, C#</li>
-                <li>Version Control: Github</li>
-                <li>Extra: knowledge in SDLC, Agile Methodology and UML, Mainframe, Linux System Administration and shell scripting</li>
-                <li>Strong attention to detail and ability to analyze and solve problems</li>
-                <li>Good communication skill and ability to work as a team</li>
-                <li>Organizational (time management) skill and ability to work efficiently</li>
-            </ul>
-            <br />
-            <h3> Education </h3>
-            <h5><em>Georgian College [Barrie, ON]    Jan 2015 - Present</em></h5> 
-            <p>Diploma in Computer Programmer (Co-op)
-            <br/>Academic Dean's List (May - Aug 2015) - 94.1% average
-            <br/>Academic Dean's List (Jan - Apr 2015) - 97.8% average</p>
-            <br/>
-            <h5><em>International College of Management Sydney (ICMS) [Manly, AUS]   Jun 2007 - Dec 2011</em></h5> Bachelor Degree in Business Management
-            <br/> GPA - 3.67 out of 4.00 (91.75%)
-            <br/>
-            <br/>
             
-            <h3> Work Experience </h3>
-            <h5><em> Nahanni Steel Products [Brampton, ON]    Aug 2015 - Dec 2015</em></h5>
-            <p></p>
-            <br/>
-            <br/> 
+                    <ul class="icons-ul">
+                        <li><i class="icon-li icon-ok"></i>Web Development: Express, Node.js, PHP, MySQL, Bootstrap3, HTML5,
+                            CSS3
+                        </li>
+                        <li><i class="icon-li icon-ok"></i>OOP language: Java, C#</li>
+                        <li><i class="icon-li icon-ok"></i>Version Control: Github</li>
+                        <li><i class="icon-li icon-ok"></i>Extra: knowledgable in Mainframe, Linux System Administration and
+                            shell scripting, Project Management, SDLC, Agile Methodology and UML.</li>
+                        <li><i class="icon-li icon-ok"></i>Strong attention to detail and ability to analyze and solve problems</li>
+                        <li><i class="icon-li icon-ok"></i>Good communication skill and ability to work as a team</li>
+                        <li><i class="icon-li icon-ok"></i>Organizational (time management) skill and ability to work efficiently</li>
+                    </ul>
+                </div>
+            </div>
+            
+            <div class="row">
+                <div class="col-md-12">
+                    <h3> Education </h3>
+                    <h5><i class="fa fa-graduation-cap"></i> <em>Georgian College [Barrie, ON]    Jan 2015 - Present</em></h5>
+                    <p>Diploma in Computer Programmer (Co-op)</p>
+                    <br/>
+                    <h5><i class="fa fa-graduation-cap"></i> <em>International College of Management Sydney (ICMS) [Manly, AUS]   Jun 2007 - Dec 2011</em></h5> Bachelor Degree in Business Management
+                    <br/> GPA - 3.67 out of 4.00 (91.75%)
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <h3> Work Experience </h3>
+                    <h5><i class="fa fa-briefcase"></i><em> Nahanni Steel Products [Brampton, ON]    Aug 2015 - Dec 2015</em></h5>
+                    <p></p>
+                </div>
+            </div>
             <h3> Educational Achievements </h3>
-            <h5><em>Georgian College Academic Dean’s List [Barrie, ON] 	May 2015</em></h5> 
-            <p>Achieved GPA 97.8% for the Winter 2015 Semester</p>
+            <h5><i class="fa fa-trophy"></i> <em>Georgian College Academic Dean’s List 	Sep 2015</em></h5>
+            <p>Achieved GPA 94.1% for Summer 2015 Semester</p>
             <br/>
-            <h5><em>International Education and Training Entrance Scholarship [Barrie, ON] 	May 2015</em></h5> 
+            <h5><i class="fa fa-trophy"></i> <em>Georgian College Academic Dean’s List   May 2015</em></h5>
+            <p>Achieved GPA 97.8% for Winter 2015 Semester</p>
+            <br/>
+            <h5><i class="fa fa-trophy"></i> <em>International Education and Training Entrance Scholarship [Barrie, ON] 	May 2015</em></h5>
             <p>Demonstrated academic achievement in the home country. Awarded by Georgian College.</p>
             <br/>
-            
+            -->
 
 
         </div>
