--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,15 +13,13 @@
         <!-- favicon -->
         <!--<link rel="icon" type="image/png" href="pics/favicon.png" />-->
         
-        <!-- Latest compiled and minified CSS -->
+        <!-- Bootstrap, font-awesome, custome CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-        <!-- Optional theme -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-        
-        <!-- custom CSS -->
+        <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+        <link rel="stylesheet" href="../scripts/lib/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
-
+        
         <nav class="navbar navbar-transparent" role="navigation">
                 <div class="container-fluid">
                     <div class="navbar-header">
