--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -8,25 +8,29 @@
         <div class="container">
             <div class="page-header">
                 <h1> Contact Me </h1>
+                <div class="row">
+                    <div class="col-md-10">
                 <form>
-                    <div class="form-group">
-                        <label for="inputName">Full Name</label>
+                    <div class="form-group input-group input-group-md">
+                        <span class="input-group-addon" id="sizing-addon2"><i class="fa fa-user"></i></span>
                         <input type="text" class="form-control" id="inputName" placeholder="Full Name" required="requried">
                     </div>
-                    <div class="form-group">
-                        <label for="inputCompany">Company</label>
+                    <div class="form-group input-group input-group-md">
+                        <span class="input-group-addon" id="sizing-addon2"><i class="fa fa-building"></i></span>
                         <input type="text" class="form-control" id="inputCompany" placeholder="Company Name">
                     </div>
-                    <div class="form-group">
-                        <label for="inputEmail">Email Address</label>
+                    <div class="form-group input-group input-group-md">
+                        <span class="input-group-addon" id="sizing-addon2"><i class="fa fa-envelope"></i></span>
                         <input type="email" class="form-control" id="inputEmail" placeholder="Email" required="required">
                     </div>
                     <div class="form-group">
                         <label for="inputMessage">Message</label>
                         <textarea class="form-control" id="inputMessage" rows="8" placeholder="Please write message with preferred contact method and information."></textarea>
                     </div>
-                    <button type="submit" class="btn btn-default">Send</button>
+                    <button type="submit" class="btn btn-default"><i class="fa fa-paper-plane"></i> Send</button>
                 </form>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
